res/examples/invalid/if_else_expression_with_unit_expr_as_cond_then_else.eg
if () { () } else { () };

// out: SyntaxError: unexpected ")"; expected: ["\"!\"", "\"(\"", "\"-\"", "\"..\"", "\"[\"", "\"false\"", "\"true\"", "identifier", "number", "string"]
// out: SyntaxError: unexpected "else"; expected: ["\")\"", "\",\"", "\";\"", "\"]\"", "\"}\""]